# nmpde-wave-equation

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  cmake-common.cmake
configs/: convergence_both.cfg  convergence_space.cfg  convergence_time.cfg  newmark_avg_accel.cfg  newmark_central_difference.cfg  radial.cfg  radial_absorbing.cfg  standing.cfg  theta_backward.cfg  theta_crank_nicolson.cfg  theta_forward.cfg
configs/boundary_pulse_left/: newmark_avg_accel.cfg
configs/circle_standing_wave/: newmark_avg_accel.cfg
configs/convergence/: convergence_both.cfg  convergence_space.cfg  convergence_time.cfg  theta_forward.cfg  (+4 more)
mesh/: circle_h0p125.geo  donut_h0p125.geo  lshape_h0p1.geo  radial_square.geo  rectangle_8x5_h0p125.geo  square_5x5_h0p03125.geo  square_5x5_h0p0625.geo  square_5x5_h0p125.geo  square_5x5_h0p25.geo  square_5x5_h0p5.geo  unit_square.geo  unit_square_h0p025.geo  unit_square_h0p05.geo  unit_square_h0p1.geo  unit_square_h0p2.geo
report/: main.tex  references.bib
results/: convergence_newmark_avg_accel_space.csv  convergence_newmark_avg_accel_time.csv  convergence_newmark_leapfrog_space.csv  convergence_newmark_leapfrog_time.csv  convergence_space.csv  convergence_theta_backward_space.csv  convergence_theta_backward_time.csv  convergence_theta_crank_nicolson_space.csv  convergence_theta_crank_nicolson_time.csv  convergence_theta_forward_space.csv  convergence_theta_forward_time.csv  convergence_time.csv  strong_scaling_research.csv
scripts/: generate_mesh.sh  plot_convergence.py  run_dissipation_dispersion.py
src/: Options.cpp  Options.hpp  WaveEquation.cpp  WaveEquation.hpp  config.cpp  config.hpp  convergence_runner.cpp  convergence_runner.hpp  function_factory.cpp  function_factory.hpp  main.cpp  newmark_integrator.hpp  theta_integrator.hpp  wave_solver.cpp  wave_solver.hpp
(+58 files in other folders)
